minimal build failed after JDK-8226690

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 14
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b17

      Building target 'images' in configuration 'linux-x86_64-minimal-release'
      /home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/ciEnv.o: In function `ciEnv::cache_jvmti_state()':
      /home/fool/workspace/jdk-dev/src/hotspot/share/prims/jvmtiExport.hpp:196: undefined reference to `JvmtiExport::_redefinition_count'
      /home/fool/workspace/jdk-dev/src/hotspot/share/prims/jvmtiExport.hpp:196: undefined reference to `JvmtiExport::_redefinition_count'
      /home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/ciEnv.o: In function `ciEnv::jvmti_state_changed() const':
      /home/fool/workspace/jdk-dev/src/hotspot/share/ci/ciEnv.cpp:245: undefined reference to `JvmtiExport::_redefinition_count'
      /home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/ciEnv.o: In function `ciEnv::register_method(ciMethod*, int, CodeOffsets*, int, CodeBuffer*, int, OopMapSet*, ExceptionHandlerTable*, ImplicitExceptionTable*, AbstractCompiler*, bool, bool, RTMState)':
      /home/fool/workspace/jdk-dev/src/hotspot/share/ci/ciEnv.cpp:245: undefined reference to `JvmtiExport::_redefinition_count'
      collect2: error: ld returned 1 exit status
      lib/CompileJvm.gmk:176: recipe for target '/home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/support/modules_libs/java.base/minimal/libjvm.so' failed
      make[3]: *** [/home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/support/modules_libs/java.base/minimal/libjvm.so] Error 1
      make[3]: *** Waiting for unfinished jobs....
      /home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/ciEnv.o: In function `ciEnv::cache_jvmti_state()':
      /home/fool/workspace/jdk-dev/src/hotspot/share/prims/jvmtiExport.hpp:196: undefined reference to `JvmtiExport::_redefinition_count'
      /home/fool/workspace/jdk-dev/src/hotspot/share/prims/jvmtiExport.hpp:196: undefined reference to `JvmtiExport::_redefinition_count'
      /home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/ciEnv.o: In function `ciEnv::jvmti_state_changed() const':
      /home/fool/workspace/jdk-dev/src/hotspot/share/ci/ciEnv.cpp:245: undefined reference to `JvmtiExport::_redefinition_count'
      /home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/ciEnv.o: In function `ciEnv::register_method(ciMethod*, int, CodeOffsets*, int, CodeBuffer*, int, OopMapSet*, ExceptionHandlerTable*, ImplicitExceptionTable*, AbstractCompiler*, bool, bool, RTMState)':
      /home/fool/workspace/jdk-dev/src/hotspot/share/ci/ciEnv.cpp:245: undefined reference to `JvmtiExport::_redefinition_count'
      collect2: error: ld returned 1 exit status
      lib/CompileGtest.gmk:58: recipe for target '/home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/gtest/libjvm.so' failed
      make[3]: *** [/home/fool/workspace/jdk-dev/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/gtest/libjvm.so] Error 1
      make/Main.gmk:253: recipe for target 'hotspot-minimal-libs' failed
      make[2]: *** [hotspot-minimal-libs] Error 2

      ERROR: Build failed for target 'images' in configuration 'linux-x86_64-minimal-release' (exit code 2)

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: