8231567: minimal build failed after JDK-8226690

Reviewed-by: shade, coleenp